--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -1,3 +1,4 @@
+\part{Approche modulaire pour construire des réseaux de neurones bio-inspirés}
 \chapter{Approche modulaire des réseaux de neurones}
 \graphicspath{{01-Modularite/}}
 \minitoc
