--- a/01bis-Architectures/source.tex
+++ b/01bis-Architectures/source.tex
@@ -1,5 +1,5 @@
 \section{Architectures de cartes auto-organisatrices}
-
+\graphicspath{{01-Modularite/}}
 Ainsi, cette thèse se place dans une démarche de construire un modèle d'architecture permettant un calcul émergent, à partir de cartes auto-organisatrices.
 
 Les cartes auto-organisatrices ont été largement étudiées depuis leur introduction en 1984. On dénombre de milliers de papiers en traitant, rien que sur la période 1984 - 2003 pour laquelle une bibliographie exhaustive par mot clés a été menée par Lampinen et Oja (ref). De nombreux papiers ont été publiés depuis, 10000 selon une recherche par mot clés sur google scholar. 
