--- a/02-SOM/source.tex
+++ b/02-SOM/source.tex
@@ -1,4 +1,4 @@
-
+\part{Un nouveau modèle multi-cartes: CxSOM et ses méthodes d'analyse}
 \chapter{Modèle d'architecture CxSOM}
 \graphicspath{{02-SOM/}}
 \minitoc
