--- a/01-Modularite/source.tex
+++ b/01-Modularite/source.tex
@@ -12,31 +12,45 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 Problème initial : trouver de nouveaux paradigmes de calcul pour faire de l'apprentissage pour les tâches d'intelligence artificielle.
-Intelligence artificielle now: deep learning. 
-Apparition de systèmes neuromorphiques. Intéret grandissant pour l'apprentissage non supervisé. Un challenge de l'IA est non seulement d'appliquer des modèles existants, mais aussi de trouver de nouveaux modèles. 
+Apparition de systèmes neuromorphiques. Intérêt grandissant pour l'apprentissage non supervisé. Un challenge de l'IA est non seulement d'appliquer des modèles existants, mais aussi de trouver de nouveaux modèles. 
 
 Une façon de trouver des nouveaux paradimes de calcul : systèmes complexes.
 Notamment, systèmes biologiques excellent à traiter de l'information. Modularité dans les systèmes biologiques.
 émergence de comportement, système complexe - mais difficulté de traiter les systèmes complexes autrement que de façon expérimentale
 
+\section{L'approche modulaire constructive comme étape de développement de systèmes d'intelligence artificielle}
+Systèmes complexes et émergence de calcul:
 
 
-\section{Systèmes complexes et émergence de calcul}
+
 
 Un système complexe se définit par un système présentant un grand nombre de composants interagissant de façon non-triviale, de façon non-linéaire, par exemple des rétroactions entre éléments. Ces systèmes présentent alors un comportement global qui semble impredictible par un raisonnement humain, même ayant l'information des règles locales qui régissent les interactions entre éléments. Le système ne peut alors s'étudier que par simulation ou étude de sa globalité, la compréhension indépendante de ses composants n'étant pas suffisante pour comprendre les mécanismes à l'oeuvre. C'est la théorie qu'on appelle holisme et qui se résumerait par : \emph{Le tout est plus que la somme des parties.}. Ce \emph{plus} signifie que des comportements émergent du système dans son ensemble. Un exemple de système complexe  est le vol organisé d'oiseaux migrateur. Ces ensembles, parfois composés de milliers d'oiseaux, volent en groupe sans qu'il n'y ait une organisation avec un leader.
 
 De tels systèmes complexes sont présents un peu partout en biologie, physique.
 %TODO reformuler
-Ainsi, des modèles implémentant des systèmes complexes sont largement utilisés dans le domaine computationnel. Les automates cellulaires en sont un exemple. Ces structures sont des grilles de cellules prenant chacune un état. L'état de chaque cellule évolye au cours du temps par des règles locales dépendant des cellules voisines. L'exemple le plus courant étant celui du jeu de la vie, dans lequel chaque cellule peut prendre deux états 0 et 1. L'évolution dépend des état des 8 cellules voisines:
+Ainsi, des modèles implémentant des systèmes complexes sont largement utilisés dans le domaine computationnel. 
+
+Qu'est ce qu'on appelle approche modulaire: construire des architectures en assemblant des composants plus simples et en définissant une interface entre ces composants.
+Première solution: assembler des composants de différentes nature,s répondant à des tâches différentes, dont on connait le comportement. Exemple des architectures de deep learning: teacher student, self-supervised, adversarial.
+C'est la définition d'interfaces entre composants qui permet de nouvelles dynamiques, et toutes les nouveaux modeles d'apprentissage ont vu le jour par de tels assemblages.
+Autre exemple: sumsumption de brooks: assemblages de blocs de comportements élémentaires, et emergence d'un comportement global.
+=> Par la définition d'interface entre modules, emergence de nouveaux processus de calcul.
+
+
+Deuxième approche de la modularité, plus pure: utiliser des modules de même nature. On définit des règles pour l'interface et pour l'évolution d'un module, les mêmes. => Emergence de comportements. 
+
+
+Les automates cellulaires en sont un exemple. Ces structures sont des grilles de cellules prenant chacune un état. L'état de chaque cellule évolye au cours du temps par des règles locales dépendant des cellules voisines. L'exemple le plus courant étant celui du jeu de la vie, dans lequel chaque cellule peut prendre deux états 0 et 1. L'évolution dépend des état des 8 cellules voisines:
 Ces règles sont en apparence simples, mais l'évolution de la grille fait émerger des comportements plus globaux: des motifs temporels et spatiaux réguliers apparaissent. Par ces motif régulier émerge une capacité de \emph{calcul}. Il est en effet possible d'utiliser ces motifs réguliers comme des outils de calculs, les motifs temporels comme des transmetteurs d'information etc. Il a été ainsi démontré que l'automate cellulaire de règle ?? permet d'implémenter une machine de turing. Ces systèmes sont donc un exemple où une capacité de calcul émerge d'un système complexe.
 
-De nombreux systèmes dynamiques présentent un comportement complexe. Un système non linéaire composé de seulement trois composantes tel que le triple pendule présentera un tel comportement. Pour construire un système complexe, on assemble des \emph{modules} similaires, prenant des états, dont l'évolution est régie par des règles non-linéaires. Appelons ca \emph{modularité} d'un système. 
+De nombreux systèmes dynamiques présentent un comportement complexe. Un système non linéaire composé de seulement trois composantes tel que le triple pendule présentera un tel comportement. 
+
+Pour construire un système complexe, on assemble des \emph{modules} similaires, prenant des états, dont l'évolution est régie par des règles non-linéaires. Appelons ca \emph{modularité} d'un système. 
 
 La modularité permet des calculs: on l'a vu avec les automates cellulaires.
 Exemple de la sumsumption de brooks : émergence d'un calcul a partir de cellules simples.
 
 Dynamic neural fiels : un autre exemple tourné vers la biologie
-
 
 Calcul décentralisé : intérets pour l'apprentissage
 \begin{itemize}
@@ -44,6 +58,8 @@ Calcul décentralisé : intérets pour l'apprentissage
     \item En robotique, on a des systèmes dynamiques
     \item inspiration biologique
 \end{itemize}
+
+
 
 \section{Inspiration biologique}
 
@@ -78,6 +94,8 @@ Les connexions du cerveau sont présentes à différentes échelles: des pathswa
 
 
 \section{Mémoire associative et multi-modalité}
+
+
 \draft{
 \subsection{Mémoire associative}
 Dans cette thèse, on s'intéresse à développer une mémoire associative via une architecture de cartes. La mémoire associative se définit par la capacité d'un réseau à apprendre des relations entre des ensembles de données et à pouvoir utiliser ces relations. Une tâche classique de mémoire associative sera la capacité de générer un motif en sortie à partir d'un autre motif d'entrée qui lui est associé, montrant que le réseau a appris la relation existant entre les deux éléments. 
@@ -87,6 +105,8 @@ On parle de multimodalité lorsqu'on cherche à apprendre des relations entre do
 Un défi de l'apprentissage multimodal vient de la nature des signaux: comment faire pour que les modalités soient traitées de façon équilibrée ? 
 %
 }
+
+
 \section{Les cartes auto-organisatrices, un modèle d'apprentissage inspiré de la biologie}\label{sec:som001}
 
 Dans cette thèse, nous nous intéressons particulièrement aux architectures de \emph{cartes auto-organisatrices}, abrégées par SOM (Self-Organizing Maps). Le modèle de cartes auto-organisatrice a été initialement développé par Kohonen \cite{Kohonen1982}; le terme de cartes de Kohonen est ainsi utilisé pour désigner ce modèle initial. De nombreux modèles dérivés ont ensuite été développés à partir de ce modèle initial, sur diverses applications. On décompte par exemple plus de 11000 travaux utilisant les cartes de Kohonen dans la littérature en 2010(citer biblio).
